--- a/index.html
+++ b/index.html
@@ -104,23 +104,33 @@
         <div class="suplier-container">
             <div class="rounded bg-dblue p-5">
                 <h3>Bigfoot Breweries</h3>
+                <p class="mt-3 mb-1">Regional Account Rep.</p>
+                <p class="text-small mt-1 mb-0">USA</p>  
             </div>
             <div class="rounded bg-dblue p-5">
                 <h3>Refrescos Americanas LTDA</h3>
+                <p class="mt-3 mb-1">Marketing Manager</p>
+                <p class="text-small mt-1 mb-0">Brazil</p>  
             </div>
             <div class="rounded bg-dblue p-5">
                 <h3>Ma Maison</h3>
+                <p class="mt-3 mb-1">Marketing Manager</p>
+                <p class="text-small mt-1 mb-0">Canada</p>  
             </div>
             <div class="rounded bg-dblue p-5">
                 <h3>Pasta Buttini s.r.l.</h3>
+                <p class="mt-3 mb-1">Order Administrator</p>
+                <p class="text-small mt-1 mb-0">Italy</p>  
             </div>
             <div class="rounded bg-dblue p-5">
                 <h3>Tokyo Traders</h3>
+                <p class="mt-3 mb-1">Marketing Manager</p>
+                <p class="text-small mt-1 mb-0">Singapore</p>
             </div>
             <div class="rounded bg-dblue p-5">
                 <h3>Leka Trading</h3>
-                <p class="mt-3 mb-1">Marketing Manager</p>
-                <p class="text-small mt-1 mb-0">Singapore</p>
+                <p class="mt-3 mb-1">Owner</p>
+                <p class="text-small mt-1 mb-0">Singapore</p>  
             </div>
         </div>
     </section>
