--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <nav class="navbar navbar-expand-lg py-4 px-5" style="background-color: #232323;">
         <div class="container-fluid">
-            <a class="navbar-brand text-title fw-bold ms-3" style="font-size: 21px;" href="index.html">Northwind</a>
+            <a class="navbar-brand text-menu fw-bold ms-3" style="font-size: 21px;" href="index.html">Northwind</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
             aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -20,44 +20,45 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0 mx-4">
                     <li class="nav-item mx-3">
-                        <a class="nav-link text-subtitle" href="#">Category</a>
+                        <a class="nav-link text-subtitle fw-bold" href="#category">Category</a>
                     </li>
                     <li class="nav-item mx-3">
-                        <a class="nav-link text-subtitle" href="#">Products</a>
+                        <a class="nav-link text-subtitle fw-bold" href="#products">Products</a>
                     </li>
                     <li class="nav-item mx-3">
-                        <a class="nav-link text-subtitle" href="#">Suppliers</a>
+                        <a class="nav-link text-subtitle fw-bold" href="#suppliers">Suppliers</a>
                     </li>
                     <li class="nav-item mx-3">
-                        <a class="nav-link text-subtitle" href="#">About</a>
+                        <a class="nav-link text-subtitle fw-bold" href="#about">About</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
 
-    <section class="category-container">
-        <div class="card text-center py-4 px-4">
-            <img class="mx-auto img-cat" src="assets/settings.png" alt="">
-            <h3 class="text-title mb-1 mt-4">Condiments</h3>
+    <section id="category" class="category-container">
+        <div class="card text-center p-5">
+            <img class="mx-auto img-cat rounded" src="assets/condimentos-y-especias-14259129303-photo-lg.jpeg" alt="">
+            <h3 class="text-title mb-0 mt-4">Condiments</h3>
         </div>
-        <div class="card text-center py-4 px-4">
-            <img class="mx-auto img-cat" src="assets/settings.png" alt="">
-            <h3 class="text-title mb-1 mt-4">Seafood</h3>
+        <div class="card text-center p-5">
+            <img class="mx-auto img-cat rounded" src="assets/food-fish-fried-fish-photo-lg.jpeg" alt="">
+            <h3 class="text-title mb-0 mt-4">Seafood</h3>
         </div>
-        <div class="card text-center py-4 px-4">
-            <img class="mx-auto img-cat" src="assets/settings.png" alt="">
-            <h3 class="text-title mb-1 mt-4">Grains/Cereals</h3>
+        <div class="card text-center p-5">
+            <img class="mx-auto img-cat rounded" src="assets/no-plastic-breakfast-cereal-granola-photo-lg.jpeg" alt="">
+            <h3 class="text-title mb-0 mt-4">Grains/Cereals</h3>
         </div>
-        <div class="card text-center py-4 px-4">
-            <img class="mx-auto img-cat" src="assets/settings.png" alt="">
-            <h3 class="text-title mb-1 mt-4">Dairy Products</h3>
+        <div class="card text-center p-5">
+            <img class="mx-auto img-cat rounded" src="assets/cow-milk-cheese-farmers-market-photo-lg.jpeg" alt="">
+            <h3 class="text-title mb-0 mt-4">Dairy Products</h3>
         </div>
     </section>
 
     <br>
-    <div class="p-5 mt-5 bg-gray">
-        <h1 class="text-title text-center my-1">Popular products</h1>
+    <div id="products" class="p-5 mt-5 bg-gray">
+        <h1 class="text-menu text-center mt-1">Popular products</h1>
+        <br>
         <h5 class="text-subtitle text-center mt-5">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsa harum eligendi omnis voluptate assumenda ratione quae veniam quis nulla,
             corrupti nihil tenetur nostrum adipisci nobis iusto illum accusantium, quo perferendis?
         </h5>
@@ -65,33 +66,33 @@
 
     <section class="product-container">
         <div class="product-list">
-            <div class="text-center border-secondary border rounded p-4 my-3">
-                <h5 class="text-subtitle mt-1 mb-2">Queso Cabrales</h5>
-                <img class="img-product" src="assets/calc.png" alt="">
+            <div class="text-center border-secondary border rounded pb-4 my-3">
+                <h4 class="text-light mt-0 mb-2 py-4 bg-menu">Queso Cabrales</h4>
+                <img class="img-product rounded mt-4 px-4" src="assets/publicdomainpictures-cheese-2785_1280.jpg" alt="">
             </div>
-            <div class="text-center border-secondary border rounded p-4 my-3">
-                <h5 class="text-subtitle mt-1 mb-2" >Queso Manchego</h5>
-                <img class="img-product" src="assets/calc.png" alt="">
+            <div class="text-center border-secondary border rounded pb-4 my-3">
+                <h4 class="text-light mt-0 mb-2 py-4 bg-menu" >Queso Manchego</h4>
+                <img class="img-product rounded mt-3" src="assets/lee_2-cheese-630511_1280.jpg" alt="">
             </div>
-            <div class="text-center border-secondary border rounded p-4 my-3">
-                <h5 class="text-subtitle mt-1 mb-2">Gorgonzola Telino</h5>
-                <img class="img-product" src="assets/calc.png" alt="">
+            <div class="text-center border-secondary border rounded pb-4 my-3">
+                <h4 class="text-light mt-0 mb-2 py-4 bg-menu">Gorgonzola Telino</h4>
+                <img class="img-product rounded mt-3" src="assets/calc.png" alt="">
             </div>
-            <div class="text-center border-secondary border rounded p-4 my-3">
-                <h5 class="text-subtitle mt-1 mb-2">Mascarpone Fabioli</h5>
-                <img class="img-product" src="assets/calc.png" alt="">
+            <div class="text-center border-secondary border rounded pb-4 my-3">
+                <h4 class="text-light mt-0 mb-2 py-4 bg-menu">Mascarpone Fabioli</h4>
+                <img class="img-product rounded mt-3" src="assets/tinademyanchuk-homemade-bakery-5308958_1280.jpg" alt="">
             </div>
-            <div class="text-center border-secondary border rounded p-4 my-3">
-                <h5 class="text-subtitle mt-1 mb-2">Geitost</h5>
-                <img class="img-product" src="assets/calc.png" alt="">
+            <div class="text-center border-secondary border rounded pb-4 my-3">
+                <h4 class="text-light mt-0 mb-2 py-4 bg-menu">Geitost</h4>
+                <img class="img-product rounded mt-3" src="assets/jaime_gonzalez-food-2320260_1280.jpg" alt="">
             </div>
-            <div class="text-center border-secondary border rounded p-4 my-3">
-                <h5 class="text-subtitle mt-1 mb-2">Camembert Pierrot</h5>
-                <img class="img-product" src="assets/calc.png" alt="">
+            <div class="text-center border-secondary border rounded pb-4 my-3">
+                <h4 class="text-light mt-0 mb-2 py-4 bg-menu">Camembert Pierrot</h4>
+                <img class="img-product rounded mt-3" src="assets/skibka-carrot-1694087_1280.jpg" alt="">
             </div>
-            <div class="text-center border-secondary border rounded p-4 my-3">
-                <h5 class="text-subtitle mt-1 mb-2">Mozzarella di Giovanni</h5>
-                <img class="img-product" src="assets/calc.png" alt="">
+            <div class="text-center border-secondary border rounded pb-4 my-3">
+                <h4 class="text-light mt-0 mb-2 py-4 bg-menu">Mozzarella di Giovanni</h4>
+                <img class="img-product rounded mt-3" src="assets/pasta-spaghetti-vegetables-spices-isolated-white.jpg" alt="">
             </div>
             <div class="text-center border-secondary border rounded p-4 my-3">
                 <h1 class="text-subtitle" style="line-height: 200px;">+10</h1>
@@ -99,35 +100,41 @@
         </div>
     </section>
 
-    <section class="bg-gray p-5">
+    <section id="suppliers" class="bg-gray p-5">
         <h1 class="text-center text-menu">Suppliers</h1>
         <div class="suplier-container">
             <div class="rounded bg-dblue p-5">
+                <img class="img-supplier rounded float-end" src="assets/front-view-glasses-beer-with-wheat.jpg" alt="">
                 <h3>Bigfoot Breweries</h3>
                 <p class="mt-3 mb-1">Regional Account Rep.</p>
                 <p class="text-small mt-1 mb-0">USA</p>  
             </div>
             <div class="rounded bg-dblue p-5">
+                <img class="img-supplier rounded float-end" src="assets/ice-falling-brown-drink.jpg" alt="">
                 <h3>Refrescos Americanas LTDA</h3>
                 <p class="mt-3 mb-1">Marketing Manager</p>
-                <p class="text-small mt-1 mb-0">Brazil</p>  
+                <p class="text-small mt-1 mb-0">Brazil</p>
             </div>
             <div class="rounded bg-dblue p-5">
+                <img class="img-supplier rounded float-end" src="assets/jaime_gonzalez-food-2320260_1280.jpg" alt="">
                 <h3>Ma Maison</h3>
                 <p class="mt-3 mb-1">Marketing Manager</p>
                 <p class="text-small mt-1 mb-0">Canada</p>  
             </div>
             <div class="rounded bg-dblue p-5">
+                <img class="img-supplier rounded float-end" src="assets/pasta-spaghetti-vegetables-spices-isolated-white.jpg" alt="">
                 <h3>Pasta Buttini s.r.l.</h3>
                 <p class="mt-3 mb-1">Order Administrator</p>
                 <p class="text-small mt-1 mb-0">Italy</p>  
             </div>
             <div class="rounded bg-dblue p-5">
+                <img class="img-supplier rounded float-end" src="assets/tgendek-japan-4808857_1280.jpg" alt="">
                 <h3>Tokyo Traders</h3>
                 <p class="mt-3 mb-1">Marketing Manager</p>
                 <p class="text-small mt-1 mb-0">Singapore</p>
             </div>
             <div class="rounded bg-dblue p-5">
+                <img class="img-supplier rounded float-end" src="assets/tinademyanchuk-homemade-bakery-5308958_1280.jpg" alt="">
                 <h3>Leka Trading</h3>
                 <p class="mt-3 mb-1">Owner</p>
                 <p class="text-small mt-1 mb-0">Singapore</p>  
@@ -135,15 +142,22 @@
         </div>
     </section>
 
-    <section class="about-container">
-        <h1 class="text-menu text-center">About</h1>
+    <section id="about" class="about-container text-center">
+        <h1 class="text-menu">About</h1>
+        <img class="img-fluid rounded mt-5 mb-3" style="max-height: 360px;" src="assets/squirrel_photos-supermarket-4052658_1280.jpg" alt="">
+        <h4 class="text-light mt-5">Example of a landing page</h4>
+        <p class="text-subtitle mt-3">Data obtained from the
+            <strong class="text-primary">Northwind</strong> SQL Server test database.
+            <br> The data in the Suppliers and Products in Category tables is manipulated.
+        </p>
+        <button class="btn btn-outline-primary btn-sm mt-4 p-3" style="width: 500px;">ORDER NOW</button>
     </section>
 
     <footer class="footer-container">
         <div class="row">
             <div class="col">
                 <h3 class="fw-bold mt-3">Northwind</h3>
-                <p class="mt-2 mb-1" style="font-size: 13px;">@ 2026 Monster Inc.</p>
+                <p class="mt-2 mb-1" style="font-size: 13px;">@ 2026 indnorthwind.</p>
             </div>
             <div class="col">
                 <span class="me-2">
@@ -161,7 +175,7 @@
                         <i class="fab fa-facebook-f" style="vertical-align: middle;"></i>
                     </a>
                 </span>
-                <p class="text-menu mt-3 mb-1">landing.page@gmail.com</p>
+                <p class="text-menu mt-3 mb-1">northwind.prod@gmail.com</p>
             </div>
         </div>
     </footer>
